feat: portfolio gallery added

--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -124,3 +124,17 @@
 
     }
 }
+
+// Portfolio Gallery
+
+@media screen and (max-width: 850px) { 
+    .column { 
+        width: 50%; 
+    } 
+}
+
+@media screen and (max-width: 400px) { 
+    .column { 
+        width: 100%; 
+    } 
+}
