--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import 'animations';
 @import 'footer';
 @import 'about';
+@import 'gallery';
 
 *, *::before, *::after {
     box-sizing: border-box;
